crates/fig-parser/tests/snapshots/integration_tests__namespaces__declaration_only.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - NamespaceDeclaration:
      visibility: Default
      annotations: []
      name:
        segments:
          - core
  - NamespaceDeclaration:
      visibility: Default
      annotations: []
      name:
        segments:
          - std
  - NamespaceDeclaration:
      visibility: Default
      annotations: []
      name:
        segments:
          - math
