crates/fig-parser/tests/snapshots/integration_tests__namespaces__empty_pass.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Namespace:
      visibility: Default
      annotations: []
      name:
        segments:
          - App
      items:
        - Pass
