crates/fig-parser/tests/snapshots/integration_tests__namespaces__nested.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Namespace:
      visibility: Default
      annotations: []
      name:
        segments:
          - std
      items:
        - Namespace:
            visibility: Default
            annotations: []
            name:
              segments:
                - io
            items:
              - FunctionDeclaration:
                  signature:
                    visibility: Default
                    annotations: []
                    is_extern: false
                    is_effect: true
                    receiver: ~
                    name: read
                    outer_generic_params: []
                    func_generic_params: []
                    self_param: ~
                    params:
                      - name: fd
                        ty: I32
                      - name: buf
                        ty:
                          Pointer:
                            nullable: false
                            mutable: true
                            element_type: U8
                      - name: len
                        ty: USize
                    return_types:
                      - USize
              - FunctionDeclaration:
                  signature:
                    visibility: Default
                    annotations: []
                    is_extern: false
                    is_effect: true
                    receiver: ~
                    name: write
                    outer_generic_params: []
                    func_generic_params: []
                    self_param: ~
                    params:
                      - name: fd
                        ty: I32
                      - name: buf
                        ty:
                          Pointer:
                            nullable: false
                            mutable: false
                            element_type: U8
                      - name: len
                        ty: USize
                    return_types:
                      - USize
