crates/fig-parser/tests/snapshots/integration_tests__namespaces__path_name.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Namespace:
      visibility: Default
      annotations: []
      name:
        segments:
          - std
          - collections
      items:
        - Struct:
            visibility: Export
            annotations: []
            is_packed: false
            name:
              segments:
                - Seq
            generic_params:
              - Type:
                  name: T
                  bounds: []
                  default_type: ~
            requires: []
            fields:
              - name: data
                ty:
                  Pointer:
                    nullable: false
                    mutable: true
                    element_type:
                      Path:
                        path:
                          segments:
                            - T
                        generic_args: []
                visibility: Default
                annotations: []
              - name: len
                ty: USize
                visibility: Default
                annotations: []
              - name: cap
                ty: USize
                visibility: Default
                annotations: []
