crates/fig-parser/tests/snapshots/integration_tests__namespaces__visibility.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Namespace:
      visibility: Public
      annotations: []
      name:
        segments:
          - api
      items:
        - FunctionDeclaration:
            signature:
              visibility: Default
              annotations: []
              is_extern: false
              is_effect: false
              receiver: ~
              name: version
              outer_generic_params: []
              func_generic_params: []
              self_param: ~
              params: []
              return_types:
                - U32
        - FunctionDeclaration:
            signature:
              visibility: Default
              annotations: []
              is_extern: false
              is_effect: false
              receiver: ~
              name: help
              outer_generic_params: []
              func_generic_params: []
              self_param: ~
              params: []
              return_types:
                - Path:
                    path:
                      segments:
                        - ok
                    generic_args: []
  - Namespace:
      visibility: Export
      annotations: []
      name:
        segments:
          - runtime
      items:
        - FunctionDeclaration:
            signature:
              visibility: Export
              annotations: []
              is_extern: false
              is_effect: false
              receiver: ~
              name: init
              outer_generic_params: []
              func_generic_params: []
              self_param: ~
              params: []
              return_types:
                - Path:
                    path:
                      segments:
                        - ok
                    generic_args: []
        - FunctionDeclaration:
            signature:
              visibility: Public
              annotations: []
              is_extern: false
              is_effect: false
              receiver: ~
              name: shutdown
              outer_generic_params: []
              func_generic_params: []
              self_param: ~
              params: []
              return_types:
                - Path:
                    path:
                      segments:
                        - ok
                    generic_args: []
