crates/fig-parser/tests/snapshots/integration_tests__namespaces__with_annotations.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Namespace:
      visibility: Default
      annotations:
        - name: deprecated
          args: []
      name:
        segments:
          - legacy
      items:
        - FunctionDeclaration:
            signature:
              visibility: Default
              annotations: []
              is_extern: false
              is_effect: false
              receiver: ~
              name: old_api
              outer_generic_params: []
              func_generic_params: []
              self_param: ~
              params: []
              return_types:
                - Path:
                    path:
                      segments:
                        - ok
                    generic_args: []
  - Namespace:
      visibility: Default
      annotations:
        - name: experimental
          args: []
      name:
        segments:
          - nightly
      items:
        - FunctionDeclaration:
            signature:
              visibility: Default
              annotations: []
              is_extern: false
              is_effect: false
              receiver: ~
              name: new_feature
              outer_generic_params: []
              func_generic_params: []
              self_param: ~
              params: []
              return_types:
                - Path:
                    path:
                      segments:
                        - ok
                    generic_args: []
