crates/fig-parser/tests/snapshots/integration_tests__namespaces__with_functions.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Namespace:
      visibility: Default
      annotations: []
      name:
        segments:
          - math
      items:
        - FunctionDeclaration:
            signature:
              visibility: Export
              annotations: []
              is_extern: false
              is_effect: false
              receiver: ~
              name: add
              outer_generic_params: []
              func_generic_params: []
              self_param: ~
              params:
                - name: a
                  ty: I32
                - name: b
                  ty: I32
              return_types:
                - I32
        - FunctionDeclaration:
            signature:
              visibility: Export
              annotations: []
              is_extern: false
              is_effect: false
              receiver: ~
              name: sub
              outer_generic_params: []
              func_generic_params: []
              self_param: ~
              params:
                - name: a
                  ty: I32
                - name: b
                  ty: I32
              return_types:
                - I32
        - FunctionDeclaration:
            signature:
              visibility: Export
              annotations: []
              is_extern: false
              is_effect: false
              receiver: ~
              name: mul
              outer_generic_params: []
              func_generic_params: []
              self_param: ~
              params:
                - name: a
                  ty: I32
                - name: b
                  ty: I32
              return_types:
                - I32
        - FunctionDeclaration:
            signature:
              visibility: Export
              annotations: []
              is_extern: false
              is_effect: false
              receiver: ~
              name: div
              outer_generic_params: []
              func_generic_params: []
              self_param: ~
              params:
                - name: a
                  ty: I32
                - name: b
                  ty: I32
              return_types:
                - I32
