crates/fig-parser/tests/snapshots/integration_tests__namespaces__with_types.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Namespace:
      visibility: Default
      annotations: []
      name:
        segments:
          - shapes
      items:
        - Struct:
            visibility: Public
            annotations: []
            is_packed: false
            name:
              segments:
                - Circle
            generic_params: []
            requires: []
            fields:
              - name: cx
                ty: F64
                visibility: Default
                annotations: []
              - name: cy
                ty: F64
                visibility: Default
                annotations: []
              - name: radius
                ty: F64
                visibility: Default
                annotations: []
        - Struct:
            visibility: Public
            annotations: []
            is_packed: false
            name:
              segments:
                - Rect
            generic_params: []
            requires: []
            fields:
              - name: x
                ty: F64
                visibility: Default
                annotations: []
              - name: y
                ty: F64
                visibility: Default
                annotations: []
              - name: w
                ty: F64
                visibility: Default
                annotations: []
              - name: h
                ty: F64
                visibility: Default
                annotations: []
        - Enum:
            visibility: Public
            annotations: []
            name:
              segments:
                - ShapeKind
            representation: ~
            generic_params: []
            requires: []
            variants:
              - name: CIRCLE
                value: ~
              - name: RECT
                value: ~
              - name: TRIANGLE
                value: ~
